crates/ferrum-interfaces/tests/ui/vnext/fail/resource_subset_release_is_not_public.rs
use ferrum_interfaces::vnext::*;

fn release_one<D: ResourceTransactionDriver>(
    transaction: &mut ResourceTransaction<D, TransactionCommitted>,
    resource_id: ResourceId,
) {
    let _ = transaction.release_subset(&[resource_id]);
}

fn main() {}
